[package]
name = "browser-hub"
description = "Manage multiple browser instances without hassles."
homepage = "https://github.com/amirkarimi/browser-hub"
repository = "https://github.com/amirkarimi/browser-hub"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["browser", "automation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.54", features = ["cargo"] }
directories = "6.0.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sysinfo = "0.37.2"
